// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots GOV.UK Components/Accordion Multiple accordions 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <div
    className="govuk-accordion"
    data-qa="accordion-container"
  >
    <div
      className="govuk-accordion__section"
      data-qa="item-1"
    >
      <div
        className="govuk-accordion__section-header"
      >
        <h2
          className="govuk-heading-l govuk-accordion__section-heading"
        >
          <span
            className="govuk-accordion__section-button govuk-heading-m"
            id="accordion-default-heading-item-1"
          >
            Test item
          </span>
        </h2>
      </div>
      <div
        aria-labelledby="accordion-default-heading-item-1"
        className="govuk-accordion__section-content"
        id="accordion-default-content-item-1"
      >
        <p
          className="govuk-body"
        >
          Hello world!
        </p>
      </div>
    </div>
    <div
      className="govuk-accordion__section"
      data-qa="item-2"
    >
      <div
        className="govuk-accordion__section-header"
      >
        <h2
          className="govuk-heading-l govuk-accordion__section-heading"
        >
          <span
            className="govuk-accordion__section-button govuk-heading-m"
            id="accordion-default-heading-item-2"
          >
            Test item 2
          </span>
        </h2>
      </div>
      <div
        aria-labelledby="accordion-default-heading-item-2"
        className="govuk-accordion__section-content"
        id="accordion-default-content-item-2"
      >
        <p
          className="govuk-body"
        >
          Hello world!
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots GOV.UK Components/Accordion Primary 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <div
    className="govuk-accordion"
    data-qa="accordion-container"
  >
    <div
      className="govuk-accordion__section"
      data-qa="writing-well-for-web"
    >
      <div
        className="govuk-accordion__section-header"
      >
        <h2
          className="govuk-heading-l govuk-accordion__section-heading"
        >
          <span
            className="govuk-accordion__section-button govuk-heading-m"
            id="accordion-default-heading-writing-well-for-web"
          >
            Writing well for the web
          </span>
        </h2>
      </div>
      <div
        aria-labelledby="accordion-default-heading-writing-well-for-web"
        className="govuk-accordion__section-content"
        id="accordion-default-content-writing-well-for-web"
      >
        <p
          className="govuk-body"
        >
          This is the content for Writing well for the web.
        </p>
      </div>
    </div>
    <div
      className="govuk-accordion__section"
      data-qa="writing-well-for-specialists"
    >
      <div
        className="govuk-accordion__section-header"
      >
        <h2
          className="govuk-heading-l govuk-accordion__section-heading"
        >
          <span
            className="govuk-accordion__section-button govuk-heading-m"
            id="accordion-default-heading-writing-well-for-specialists"
          >
            Writing well for specialists
          </span>
        </h2>
      </div>
      <div
        aria-labelledby="accordion-default-heading-writing-well-for-specialists"
        className="govuk-accordion__section-content"
        id="accordion-default-content-writing-well-for-specialists"
      >
        <p
          className="govuk-body"
        >
          This is the content for Writing well for specialists.
        </p>
      </div>
    </div>
    <div
      className="govuk-accordion__section"
      data-qa="know-your-audience"
    >
      <div
        className="govuk-accordion__section-header"
      >
        <h2
          className="govuk-heading-l govuk-accordion__section-heading"
        >
          <span
            className="govuk-accordion__section-button govuk-heading-m"
            id="accordion-default-heading-know-your-audience"
          >
            Know your audience
          </span>
        </h2>
      </div>
      <div
        aria-labelledby="accordion-default-heading-know-your-audience"
        className="govuk-accordion__section-content"
        id="accordion-default-content-know-your-audience"
      >
        <p
          className="govuk-body"
        >
          This is the content for Know your audience.
        </p>
      </div>
    </div>
    <div
      className="govuk-accordion__section"
      data-qa="how-people-read"
    >
      <div
        className="govuk-accordion__section-header"
      >
        <h2
          className="govuk-heading-l govuk-accordion__section-heading"
        >
          <span
            className="govuk-accordion__section-button govuk-heading-m"
            id="accordion-default-heading-how-people-read"
          >
            How people read
          </span>
        </h2>
      </div>
      <div
        aria-labelledby="accordion-default-heading-how-people-read"
        className="govuk-accordion__section-content"
        id="accordion-default-content-how-people-read"
      >
        <p
          className="govuk-body"
        >
          This is the content for How people read.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots GOV.UK Components/Accordion Single accordion 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <div
    className="govuk-accordion"
    data-qa="accordion-container"
  >
    <div
      className="govuk-accordion__section"
      data-qa="item-1"
    >
      <div
        className="govuk-accordion__section-header"
      >
        <h2
          className="govuk-heading-l govuk-accordion__section-heading"
        >
          <span
            className="govuk-accordion__section-button govuk-heading-m"
            id="accordion-default-heading-item-1"
          >
            Test item
          </span>
        </h2>
      </div>
      <div
        aria-labelledby="accordion-default-heading-item-1"
        className="govuk-accordion__section-content"
        id="accordion-default-content-item-1"
      >
        <p
          className="govuk-body"
        >
          Hello world!
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots GOV.UK Components/Button Disabled Button 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <button
    className="govuk-button govuk-!-margin-right-1"
    data-module="govuk-button"
    disabled={true}
  >
    A disabled button
  </button>
</div>
`;

exports[`Storyshots GOV.UK Components/Button Link Button 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <button
    className="govuk-link"
    data-module="govuk-button"
  >
    A link button
  </button>
</div>
`;

exports[`Storyshots GOV.UK Components/Button Primary 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <button
    className="govuk-button govuk-!-margin-right-1"
    data-module="govuk-button"
  >
    Return to Desktop
  </button>
</div>
`;

exports[`Storyshots GOV.UK Components/Button Primary Button 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <button
    className="govuk-button govuk-!-margin-right-1"
    data-module="govuk-button"
  >
    A primary button
  </button>
</div>
`;

exports[`Storyshots GOV.UK Components/Button Secondary Button 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <button
    className="govuk-button govuk-!-margin-right-1 govuk-button--secondary"
    data-module="govuk-button"
  >
    A secondary button
  </button>
</div>
`;

exports[`Storyshots GOV.UK Components/Button Warning Button 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <button
    className="govuk-button govuk-!-margin-right-1 govuk-button--warning"
    data-module="govuk-button"
  >
    A warning button
  </button>
</div>
`;

exports[`Storyshots GOV.UK Components/Details Primary 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <details
    className="govuk-details"
    data-module="govuk-details"
  >
    <summary
      className="govuk-details__summary"
    >
      <span
        className="govuk-details__summary-text"
      >
        Help with nationality
      </span>
    </summary>
    <div
      className="govuk-details__text"
    >
      We need to know your nationality so we can work out which elections you’re entitled to vote in. If you cannot provide your nationality, you’ll have to send copies of identity documents through the post.
    </div>
  </details>
</div>
`;

exports[`Storyshots GOV.UK Components/Footer Primary 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <footer
    className="govuk-footer"
    role="contentinfo"
  >
    <div
      className="govuk-width-container"
    >
      <div
        className="govuk-footer__navigation"
      >
        <div
          className="govuk-footer__section govuk-grid-column-two-thirds"
        >
          <h2
            className="govuk-heading-m govuk-footer__heading"
          >
            site.footer.supportLinks
          </h2>
          <ul
            className="govuk-footer__list govuk-footer__list--columns-2"
          >
            <li
              className="govuk-footer__list-item"
            >
              <a
                className="govuk-footer__link"
                data-qa="innovate-uk"
                href="https://www.gov.uk/government/organisations/innovate-uk"
                id="innovate-uk"
                rel="noopener noreferrer"
                target="_blank"
              >
                site.footer.innovateUk
              </a>
            </li>
            <li
              className="govuk-footer__list-item"
            >
              <a
                className="govuk-footer__link"
                data-qa="innovation-funding-advice"
                href="https://www.gov.uk/guidance/innovation-apply-for-a-funding-award"
                id="innovation-funding-advice"
                rel="noopener noreferrer"
                target="_blank"
              >
                site.footer.innovationFundingAdvice
              </a>
            </li>
            <li
              className="govuk-footer__list-item"
            >
              <a
                className="govuk-footer__link"
                data-qa="connect-to-innovation-experts"
                href="https://www.gov.uk/guidance/innovation-get-support-and-advice"
                id="connect-to-innovation-experts"
                rel="noopener noreferrer"
                target="_blank"
              >
                site.footer.connectToInnovationExperts
              </a>
            </li>
            <li
              className="govuk-footer__list-item"
            >
              <a
                className="govuk-footer__link"
                data-qa="events"
                href="https://connect.innovateuk.org/events"
                id="events"
                rel="noopener noreferrer"
                target="_blank"
              >
                site.footer.events
              </a>
            </li>
            <li
              className="govuk-footer__list-item"
            >
              <a
                className="govuk-footer__link"
                data-qa="innovate-uk-blog"
                href="https://innovateuk.blog.gov.uk/"
                id="innovate-uk-blog"
                rel="noopener noreferrer"
                target="_blank"
              >
                site.footer.innovateUkBlog
              </a>
            </li>
            <li
              className="govuk-footer__list-item"
            >
              <a
                className="govuk-footer__link"
                data-qa="gov.uk-accessibility"
                href="https://www.gov.uk/help/accessibility"
                id="gov.uk-accessibility"
                rel="noopener noreferrer"
                target="_blank"
              >
                site.footer.govAccessibility
              </a>
            </li>
            <li
              className="govuk-footer__list-item"
            >
              <a
                className="govuk-footer__link"
                data-qa="terms-and-conditions"
                href="https://apply-for-innovation-funding.service.gov.uk/info/terms-and-conditions"
                id="terms-and-conditions"
                rel="noopener noreferrer"
                target="_blank"
              >
                site.footer.termsAndConditions
              </a>
            </li>
            <li
              className="govuk-footer__list-item"
            >
              <a
                className="govuk-footer__link"
                data-qa="contact-us"
                href="https://apply-for-innovation-funding.service.gov.uk/info/contact"
                id="contact-us"
                rel="noopener noreferrer"
                target="_blank"
              >
                site.footer.contactUs
              </a>
            </li>
            <li
              className="govuk-footer__list-item"
            >
              <a
                className="govuk-footer__link"
                data-qa="sign-up-for-competition-updates"
                href="http://info.innovateuk.org/emailpref"
                id="sign-up-for-competition-updates"
                rel="noopener noreferrer"
                target="_blank"
              >
                site.footer.signUpForCompetitionUpdates
              </a>
            </li>
            <li
              className="govuk-footer__list-item"
            >
              <a
                className="govuk-footer__link"
                data-qa="latest-funding-opportunities"
                href="https://apply-for-innovation-funding.service.gov.uk/competition/search"
                id="latest-funding-opportunities"
                rel="noopener noreferrer"
                target="_blank"
              >
                site.footer.latestFundingOpportunities
              </a>
            </li>
          </ul>
        </div>
      </div>
      <hr
        className="govuk-footer__section-break"
      />
      <div
        className="govuk-footer__meta"
      >
        <div
          className="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <ul
            className="govuk-list govuk-list--bullet govuk-footer__inline-list"
          >
            <li
              className="govuk-footer__inline-list-item"
            >
              site.footer.explainCookies
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="https://apply-for-innovation-funding.service.gov.uk/info/cookies"
                rel="noopener noreferrer"
                target="_blank"
              >
                site.footer.cookieFindOutMore
              </a>
              .
            </li>
          </ul>
          <svg
            aria-hidden="true"
            className="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            role="presentation"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            className="govuk-footer__licence-description"
            data-qa="licence"
          >
            site.footer.externalLinkText
          </span>
        </div>
        <div
          className="govuk-footer__meta-item"
        >
          <a
            className="govuk-footer__link govuk-footer__copyright-logo"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
            rel="noopener noreferrer"
            target="_blank"
          >
            site.footer.crownCopyright
          </a>
        </div>
      </div>
    </div>
  </footer>
</div>
`;

exports[`Storyshots GOV.UK Components/Tag Blue 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <strong
    className="govuk-tag govuk-tag--blue"
  >
    Pending
  </strong>
</div>
`;

exports[`Storyshots GOV.UK Components/Tag Green 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <strong
    className="govuk-tag govuk-tag--green"
  >
    New
  </strong>
</div>
`;

exports[`Storyshots GOV.UK Components/Tag Grey 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <strong
    className="govuk-tag govuk-tag--grey"
  >
    Inactive
  </strong>
</div>
`;

exports[`Storyshots GOV.UK Components/Tag Orange 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <strong
    className="govuk-tag govuk-tag--orange"
  >
    Declined
  </strong>
</div>
`;

exports[`Storyshots GOV.UK Components/Tag Pink 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <strong
    className="govuk-tag govuk-tag--pink"
  >
    Sent
  </strong>
</div>
`;

exports[`Storyshots GOV.UK Components/Tag Primary 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <strong
    className="govuk-tag"
  >
    Active
  </strong>
</div>
`;

exports[`Storyshots GOV.UK Components/Tag Purple 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <strong
    className="govuk-tag govuk-tag--purple"
  >
    Received
  </strong>
</div>
`;

exports[`Storyshots GOV.UK Components/Tag Red 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <strong
    className="govuk-tag govuk-tag--red"
  >
    Rejected
  </strong>
</div>
`;

exports[`Storyshots GOV.UK Components/Tag Solid 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <strong
    className="govuk-tag"
  >
    Active
  </strong>
</div>
`;

exports[`Storyshots GOV.UK Components/Tag Turquoise 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <strong
    className="govuk-tag govuk-tag--turquoise"
  >
    Active
  </strong>
</div>
`;

exports[`Storyshots GOV.UK Components/Tag Yellow 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <strong
    className="govuk-tag govuk-tag--yellow"
  >
    Delayed
  </strong>
</div>
`;

exports[`Storyshots GOV.UK Patterns/Task list Primary 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <ol
    className="govuk-list govuk-list--number app-task-list"
  >
    <li>
      <h2
        className="govuk-heading-l app-task-list__section"
      >
        <span
          className="app-task-list__section-number"
        >
          1
          .
        </span>
         
        Scope Change
      </h2>
      <ul
        className="govuk-list govuk-list--bullet app-task-list__items"
      >
        <li
          className="app-task-list__item"
        >
          <span
            className="app-task-list__task-name"
            id="files"
          >
            View files
          </span>
          <span
            className="app-task-list__task-action"
          >
            <strong
              className="govuk-tag"
            >
              Complete
            </strong>
          </span>
        </li>
        <li
          className="app-task-list__item"
        >
          <span
            className="app-task-list__task-name"
            id="rationale"
          >
            View rationale
          </span>
          <span
            className="app-task-list__task-action"
          >
            <strong
              className="govuk-tag govuk-tag--blue"
            >
              Incomplete
            </strong>
          </span>
        </li>
        <li
          className="app-task-list__item"
        >
          <span
            className="app-task-list__task-name"
            id="reasoning"
          >
            View reasoning
          </span>
          <span
            className="app-task-list__task-action"
          >
            <strong
              className="govuk-tag govuk-tag--grey"
            >
              To do
            </strong>
          </span>
        </li>
      </ul>
    </li>
    <li>
      <h2
        className="govuk-heading-l app-task-list__section"
      >
        <span
          className="app-task-list__section-number"
        >
          2
          .
        </span>
         
        Partner Change
      </h2>
      <ul
        className="govuk-list govuk-list--bullet app-task-list__items"
      >
        <li
          className="app-task-list__item"
        >
          <span
            className="app-task-list__task-name"
            id="blah"
          >
            blah
          </span>
          <span
            className="app-task-list__task-action"
          >
            <strong
              className="govuk-tag govuk-tag--grey"
            >
              To do
            </strong>
          </span>
        </li>
      </ul>
    </li>
  </ol>
</div>
`;

exports[`Storyshots GOV.UK Patterns/Task list Validation 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <ol
    className="govuk-list govuk-list--number app-task-list"
  >
    <li>
      <h2
        className="govuk-heading-l app-task-list__section"
      >
        <span
          className="app-task-list__section-number"
        >
          1
          .
        </span>
         
        Scope Change
      </h2>
      <ul
        className="govuk-list govuk-list--bullet app-task-list__items"
      >
        <a
          aria-hidden="true"
          id="Val:0"
        />
        <p
          className="govuk-error-message"
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          Thanks to you, I am a figure of ridicule within the market community.
        </p>
        <li
          className="app-task-list__item"
        >
          <span
            className="app-task-list__task-name"
            id="files"
          >
            View files
          </span>
          <span
            className="app-task-list__task-action"
          >
            <strong
              className="govuk-tag"
            >
              Complete
            </strong>
          </span>
        </li>
        <li
          className="app-task-list__item"
        >
          <span
            className="app-task-list__task-name"
            id="rationale"
          >
            View rationale
          </span>
          <span
            className="app-task-list__task-action"
          >
            <strong
              className="govuk-tag govuk-tag--blue"
            >
              Incomplete
            </strong>
          </span>
        </li>
        <li
          className="app-task-list__item"
        >
          <span
            className="app-task-list__task-name"
            id="reasoning"
          >
            View reasoning
          </span>
          <span
            className="app-task-list__task-action"
          >
            <strong
              className="govuk-tag govuk-tag--grey"
            >
              To do
            </strong>
          </span>
        </li>
      </ul>
    </li>
  </ol>
</div>
`;

exports[`Storyshots IFSPA Renderer/Accessibility Text Primary 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <div
    className="govuk-visually-hidden"
  >
    The quick brown fox jumps over the lazy dog.
  </div>
</div>
`;

exports[`Storyshots IFSPA Renderer/Currency Primary 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <span
    className="currency"
    style={
      Object {
        "whiteSpace": "nowrap",
      }
    }
  >
    £124.00
  </span>
</div>
`;

exports[`Storyshots IFSPA Renderer/Currency Round To Zero Decimal Places 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <span
    className="currency"
    style={
      Object {
        "whiteSpace": "nowrap",
      }
    }
  >
    £125
  </span>
</div>
`;

exports[`Storyshots IFSPA Renderer/Currency Whole Number With Commas 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <span
    className="currency"
    style={
      Object {
        "whiteSpace": "nowrap",
      }
    }
  >
    £4,815,162,342
  </span>
</div>
`;

exports[`Storyshots IFSPA Renderer/Date & Time/Date + Time/Full Date Time Primary 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <span>
    25 December 2023, 12:00am
  </span>
</div>
`;

exports[`Storyshots IFSPA Renderer/Date & Time/Date + Time/Short Date Time Primary 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <span>
    25 Dec 2023, 12:00am
  </span>
</div>
`;

exports[`Storyshots IFSPA Renderer/Date & Time/Date/Day + Long Month Primary 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <span>
    1 December
  </span>
</div>
`;

exports[`Storyshots IFSPA Renderer/Date & Time/Date/Full Date Primary 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <span>
    25 December 2023
  </span>
</div>
`;

exports[`Storyshots IFSPA Renderer/Date & Time/Date/Full Numberic Date Primary 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <span>
    25/12/2023
  </span>
</div>
`;

exports[`Storyshots IFSPA Renderer/Date & Time/Date/Long Year Primary 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <span>
    2023
  </span>
</div>
`;

exports[`Storyshots IFSPA Renderer/Date & Time/Date/Month + Year Primary 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <span>
    December 2023
  </span>
</div>
`;

exports[`Storyshots IFSPA Renderer/Date & Time/Date/Short Date Primary 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <span>
    25 Dec 2023
  </span>
</div>
`;

exports[`Storyshots IFSPA Renderer/Date & Time/Date/Short Month Primary 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <span>
    Dec
  </span>
</div>
`;

exports[`Storyshots IFSPA Renderer/Date & Time/Length/Duration Different Years 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <span>
    27 months
  </span>
</div>
`;

exports[`Storyshots IFSPA Renderer/Date & Time/Length/Duration Primary 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <span>
    3 months
  </span>
</div>
`;

exports[`Storyshots IFSPA Renderer/Date & Time/Length/Duration Same Year 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <span>
    3 months
  </span>
</div>
`;

exports[`Storyshots IFSPA Renderer/Date & Time/Length/Months Primary 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <span>
    11 months
  </span>
</div>
`;

exports[`Storyshots IFSPA Renderer/Date & Time/Range/Condensed Date Range Different Years 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <span>
    <span
      style={
        Object {
          "whiteSpace": "nowrap",
        }
      }
    >
      Jun 1942
       to 
    </span>
    <span
      style={
        Object {
          "whiteSpace": "nowrap",
        }
      }
    >
      Aug 1944
    </span>
  </span>
</div>
`;

exports[`Storyshots IFSPA Renderer/Date & Time/Range/Condensed Date Range Primary 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <span>
    <span
      style={
        Object {
          "whiteSpace": "nowrap",
        }
      }
    >
      May
       to 
    </span>
    <span
      style={
        Object {
          "whiteSpace": "nowrap",
        }
      }
    >
      Jul 2023
    </span>
  </span>
</div>
`;

exports[`Storyshots IFSPA Renderer/Date & Time/Range/Condensed Date Range Same Year 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <span>
    <span
      style={
        Object {
          "whiteSpace": "nowrap",
        }
      }
    >
      Jun
       to 
    </span>
    <span
      style={
        Object {
          "whiteSpace": "nowrap",
        }
      }
    >
      Aug 1995
    </span>
  </span>
</div>
`;

exports[`Storyshots IFSPA Renderer/Date & Time/Range/Long Date Range Different Years 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <span>
    <span
      style={
        Object {
          "whiteSpace": "nowrap",
        }
      }
    >
      1 June 1942
       to 
    </span>
    <span
      style={
        Object {
          "whiteSpace": "nowrap",
        }
      }
    >
      2 August 1944
    </span>
  </span>
</div>
`;

exports[`Storyshots IFSPA Renderer/Date & Time/Range/Long Date Range Primary 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <span>
    <span
      style={
        Object {
          "whiteSpace": "nowrap",
        }
      }
    >
      1 May
       to 
    </span>
    <span
      style={
        Object {
          "whiteSpace": "nowrap",
        }
      }
    >
      2 July 2023
    </span>
  </span>
</div>
`;

exports[`Storyshots IFSPA Renderer/Date & Time/Range/Long Date Range Same Year 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <span>
    <span
      style={
        Object {
          "whiteSpace": "nowrap",
        }
      }
    >
      1 June
       to 
    </span>
    <span
      style={
        Object {
          "whiteSpace": "nowrap",
        }
      }
    >
      2 August 1995
    </span>
  </span>
</div>
`;

exports[`Storyshots IFSPA Renderer/Date & Time/Range/Short Date Range Different Years 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <span>
    <span
      style={
        Object {
          "whiteSpace": "nowrap",
        }
      }
    >
      1 Jun 1942
       to 
    </span>
    <span
      style={
        Object {
          "whiteSpace": "nowrap",
        }
      }
    >
      2 Aug 1944
    </span>
  </span>
</div>
`;

exports[`Storyshots IFSPA Renderer/Date & Time/Range/Short Date Range Primary 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <span>
    <span
      style={
        Object {
          "whiteSpace": "nowrap",
        }
      }
    >
      1 May
       to 
    </span>
    <span
      style={
        Object {
          "whiteSpace": "nowrap",
        }
      }
    >
      2 Jul 2023
    </span>
  </span>
</div>
`;

exports[`Storyshots IFSPA Renderer/Date & Time/Range/Short Date Range Same Year 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <span>
    <span
      style={
        Object {
          "whiteSpace": "nowrap",
        }
      }
    >
      1 Jun
       to 
    </span>
    <span
      style={
        Object {
          "whiteSpace": "nowrap",
        }
      }
    >
      2 Aug 1995
    </span>
  </span>
</div>
`;

exports[`Storyshots IFSPA Renderer/Date & Time/Range/Short Date Range from Duration Different Years 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <span>
    <span
      style={
        Object {
          "whiteSpace": "nowrap",
        }
      }
    >
      1 Jun 1942
       to 
    </span>
    <span
      style={
        Object {
          "whiteSpace": "nowrap",
        }
      }
    >
      31 Jul 1943
    </span>
  </span>
</div>
`;

exports[`Storyshots IFSPA Renderer/Date & Time/Range/Short Date Range from Duration Primary 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <span>
    <span
      style={
        Object {
          "whiteSpace": "nowrap",
        }
      }
    >
      1 May
       to 
    </span>
    <span
      style={
        Object {
          "whiteSpace": "nowrap",
        }
      }
    >
      30 Jun 2023
    </span>
  </span>
</div>
`;

exports[`Storyshots IFSPA Renderer/Date & Time/Range/Short Date Range from Duration Same Month 1`] = `
<div
  className="govuk-template__body"
  id="root"
/>
`;

exports[`Storyshots IFSPA Renderer/Date & Time/Range/Short Date Range from Duration Same Year 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <span>
    <span
      style={
        Object {
          "whiteSpace": "nowrap",
        }
      }
    >
      1 Jun
       to 
    </span>
    <span
      style={
        Object {
          "whiteSpace": "nowrap",
        }
      }
    >
      31 Jul 1995
    </span>
  </span>
</div>
`;

exports[`Storyshots IFSPA Renderer/Email Primary 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <a
    className="govuk-link govuk-!-font-size-19"
    href="mailto:nicole.hedges@iuk.ukri.org"
  >
    nicole.hedges
    <wbr />
    @
    iuk.ukri.org
  </a>
</div>
`;

exports[`Storyshots IFSPA Renderer/Email Very long E-Mail Address 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <a
    className="govuk-link govuk-!-font-size-19"
    href="mailto:thequickbrownfoxjumpsoverthelazydogthequickbrownfoxjumpsoverthelazydogthequickbrownfoxjumpsoverthelazydog@iuk.ukri.org"
  >
    thequickbrownfoxjumpsoverthelazydogthequickbrownfoxjumpsoverthelazydogthequickbrownfoxjumpsoverthelazydog
    <wbr />
    @
    iuk.ukri.org
  </a>
</div>
`;

exports[`Storyshots IFSPA Renderer/Markdown Primary 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <span
    className="govuk-body markdown"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<p>The quick brown fox
jumps over the lazy dog.</p>
",
      }
    }
  />
</div>
`;

exports[`Storyshots IFSPA Renderer/Markdown Trusted 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <span
    className="govuk-body markdown"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<h1 id=\\"markdown\\">Markdown</h1>
<p>A button should appear because it is trusted.  </p>
<p><button>This button is trusted!</button>
    </p>
",
      }
    }
  />
</div>
`;

exports[`Storyshots IFSPA Renderer/Markdown Untrusted 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <span
    className="govuk-body markdown"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<h1 id=\\"markdown\\">Markdown</h1>
<p>A button should not appear because it is not trusted.<br>Instead, the text content of the button should show.</p>
<p>This button is trusted!</p>
",
      }
    }
  />
</div>
`;

exports[`Storyshots IFSPA Renderer/Percentage Infinte Story 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <span
    style={
      Object {
        "whiteSpace": "nowrap",
      }
    }
  >
    31%
  </span>
</div>
`;

exports[`Storyshots IFSPA Renderer/Percentage Primary 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <span
    style={
      Object {
        "whiteSpace": "nowrap",
      }
    }
  >
    124.00%
  </span>
</div>
`;

exports[`Storyshots IFSPA Renderer/Percentage Round To Zero Decimal Places 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <span
    style={
      Object {
        "whiteSpace": "nowrap",
      }
    }
  >
    125%
  </span>
</div>
`;

exports[`Storyshots IFSPA Renderer/Percentage Whole Number With Commas 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <span
    style={
      Object {
        "whiteSpace": "nowrap",
      }
    }
  >
    4,815,162,342%
  </span>
</div>
`;

exports[`Storyshots IFSPA Renderer/SimpleString Bold 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <p
    className="govuk-body govuk-!-font-weight-bold"
  >
    Achtung! Das ist nicht numberwang!
  </p>
</div>
`;

exports[`Storyshots IFSPA Renderer/SimpleString Multiline 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <p
    className="govuk-body govuk-body--multiline"
  >
    This is a multiline story.
This means anytime there is an \\n character,
the actual text
is wrapped.
  </p>
</div>
`;

exports[`Storyshots IFSPA Renderer/SimpleString Primary 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <p
    className="govuk-body"
  >
    The quick brown fox
jumps over the lazy dog.
  </p>
</div>
`;

exports[`Storyshots IFSPA Renderer/Table Custom Column 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <div
    className="govuk-table-wrapper"
    data-qa="primary-table"
  >
    <table
      className="govuk-table"
    >
      <colgroup>
        <col
          data-qa="col-col-string"
          style={Object {}}
        />
        <col
          data-qa="col-col-custom"
          style={Object {}}
        />
      </colgroup>
      <thead
        className="govuk-table__head"
      >
        <tr
          className="govuk-table__row"
        >
          <th
            className="govuk-table__header"
            onClick={[Function]}
            scope="col"
          >
            Id
          </th>
          <th
            className="govuk-table__header"
            onClick={[Function]}
            scope="col"
          >
            The custom column
          </th>
        </tr>
      </thead>
      <tbody
        className="govuk-table__body"
      >
        <tr
          className="govuk-table__row"
        >
          <td
            className="govuk-table__cell"
            style={
              Object {
                "paddingRight": undefined,
              }
            }
          >
            Record 101
          </td>
          <td
            className="govuk-table__cell"
            style={
              Object {
                "paddingRight": undefined,
              }
            }
          >
            <span>
              This is the custom column with tags: 
              <i>
                Example 1
              </i>
               on 
              <span>
                10 May 2023, 12:06pm
              </span>
            </span>
          </td>
        </tr>
        <tr
          className="govuk-table__row"
        >
          <td
            className="govuk-table__cell"
            style={
              Object {
                "paddingRight": undefined,
              }
            }
          >
            Record 102
          </td>
          <td
            className="govuk-table__cell"
            style={
              Object {
                "paddingRight": undefined,
              }
            }
          >
            <span>
              This is the custom column with tags: 
              <i>
                Example 2
              </i>
               on 
              <span>
                11 May 2023, 12:06pm
              </span>
            </span>
          </td>
        </tr>
        <tr
          className="govuk-table__row"
        >
          <td
            className="govuk-table__cell"
            style={
              Object {
                "paddingRight": undefined,
              }
            }
          >
            Record 103
          </td>
          <td
            className="govuk-table__cell"
            style={
              Object {
                "paddingRight": undefined,
              }
            }
          >
            <span>
              This is the custom column with tags: 
              <i>
                Example 3
              </i>
               on 
              <span>
                12 May 2023, 12:06pm
              </span>
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots IFSPA Renderer/Table Custom Footer 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <div
    className="govuk-table-wrapper"
    data-qa="primary-table"
  >
    <table
      className="govuk-table"
    >
      <colgroup>
        <col
          data-qa="col-col-string"
          style={Object {}}
        />
        <col
          data-qa="col-col-currency"
          style={Object {}}
        />
      </colgroup>
      <thead
        className="govuk-table__head"
      >
        <tr
          className="govuk-table__row"
        >
          <th
            className="govuk-table__header"
            onClick={[Function]}
            scope="col"
          >
            Id
          </th>
          <th
            className="govuk-table__header govuk-table__header--numeric"
            onClick={[Function]}
            scope="col"
          >
            Cost
          </th>
        </tr>
      </thead>
      <tbody
        className="govuk-table__body"
      >
        <tr
          className="govuk-table__row"
        >
          <td
            className="govuk-table__cell"
            style={
              Object {
                "paddingRight": undefined,
              }
            }
          >
            Record 101
          </td>
          <td
            className="govuk-table__cell govuk-table__cell--numeric"
            style={
              Object {
                "paddingRight": undefined,
              }
            }
          >
            <span
              className="currency"
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
            >
              £10.35
            </span>
          </td>
        </tr>
        <tr
          className="govuk-table__row"
        >
          <td
            className="govuk-table__cell"
            style={
              Object {
                "paddingRight": undefined,
              }
            }
          >
            Record 102
          </td>
          <td
            className="govuk-table__cell govuk-table__cell--numeric"
            style={
              Object {
                "paddingRight": undefined,
              }
            }
          >
            <span
              className="currency"
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
            >
              £20.70
            </span>
          </td>
        </tr>
        <tr
          className="govuk-table__row"
        >
          <td
            className="govuk-table__cell"
            style={
              Object {
                "paddingRight": undefined,
              }
            }
          >
            Record 103
          </td>
          <td
            className="govuk-table__cell govuk-table__cell--numeric"
            style={
              Object {
                "paddingRight": undefined,
              }
            }
          >
            <span
              className="currency"
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
            >
              £31.05
            </span>
          </td>
        </tr>
      </tbody>
      <tfoot>
        <tr
          className="govuk-table__row"
        >
          <td
            className="govuk-table__header"
          >
            Total costs
          </td>
          <td
            className="govuk-table__header govuk-table__header--numeric"
          >
            <span
              className="currency"
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
            >
              £62.10
            </span>
          </td>
        </tr>
      </tfoot>
    </table>
  </div>
</div>
`;

exports[`Storyshots IFSPA Renderer/Table Primary 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <div
    className="govuk-table-wrapper"
    data-qa="primary-table"
  >
    <table
      className="govuk-table"
    >
      <colgroup>
        <col
          data-qa="col-col-number"
          style={Object {}}
        />
        <col
          data-qa="col-col-string"
          style={Object {}}
        />
        <col
          data-qa="col-col-currency"
          style={Object {}}
        />
        <col
          data-qa="col-col-shortdate"
          style={Object {}}
        />
        <col
          data-qa="col-col-fulldate"
          style={Object {}}
        />
      </colgroup>
      <thead
        className="govuk-table__head"
      >
        <tr
          className="govuk-table__row"
        >
          <th
            className="govuk-table__header"
            onClick={[Function]}
            scope="col"
          >
            Id
          </th>
          <th
            className="govuk-table__header"
            onClick={[Function]}
            scope="col"
          >
            Name
          </th>
          <th
            className="govuk-table__header govuk-table__header--numeric"
            onClick={[Function]}
            scope="col"
          >
            Cost
          </th>
          <th
            className="govuk-table__header"
            onClick={[Function]}
            scope="col"
          >
            Created (Short)
          </th>
          <th
            className="govuk-table__header"
            onClick={[Function]}
            scope="col"
          >
            Created (Full)
          </th>
        </tr>
      </thead>
      <tbody
        className="govuk-table__body"
      >
        <tr
          className="govuk-table__row"
        >
          <td
            className="govuk-table__cell"
            style={
              Object {
                "paddingRight": undefined,
              }
            }
          >
            Record 101
          </td>
          <td
            className="govuk-table__cell"
            style={
              Object {
                "paddingRight": undefined,
              }
            }
          >
            Example 1
          </td>
          <td
            className="govuk-table__cell govuk-table__cell--numeric"
            style={
              Object {
                "paddingRight": undefined,
              }
            }
          >
            <span
              className="currency"
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
            >
              £10.35
            </span>
          </td>
          <td
            className="govuk-table__cell"
            style={
              Object {
                "paddingRight": undefined,
              }
            }
          >
            <span>
              10 May 2023
            </span>
          </td>
          <td
            className="govuk-table__cell"
            style={
              Object {
                "paddingRight": undefined,
              }
            }
          >
            <span>
              10 May 2023
            </span>
          </td>
        </tr>
        <tr
          className="govuk-table__row"
        >
          <td
            className="govuk-table__cell"
            style={
              Object {
                "paddingRight": undefined,
              }
            }
          >
            Record 102
          </td>
          <td
            className="govuk-table__cell"
            style={
              Object {
                "paddingRight": undefined,
              }
            }
          >
            Example 2
          </td>
          <td
            className="govuk-table__cell govuk-table__cell--numeric"
            style={
              Object {
                "paddingRight": undefined,
              }
            }
          >
            <span
              className="currency"
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
            >
              £20.70
            </span>
          </td>
          <td
            className="govuk-table__cell"
            style={
              Object {
                "paddingRight": undefined,
              }
            }
          >
            <span>
              11 May 2023
            </span>
          </td>
          <td
            className="govuk-table__cell"
            style={
              Object {
                "paddingRight": undefined,
              }
            }
          >
            <span>
              11 May 2023
            </span>
          </td>
        </tr>
        <tr
          className="govuk-table__row"
        >
          <td
            className="govuk-table__cell"
            style={
              Object {
                "paddingRight": undefined,
              }
            }
          >
            Record 103
          </td>
          <td
            className="govuk-table__cell"
            style={
              Object {
                "paddingRight": undefined,
              }
            }
          >
            Example 3
          </td>
          <td
            className="govuk-table__cell govuk-table__cell--numeric"
            style={
              Object {
                "paddingRight": undefined,
              }
            }
          >
            <span
              className="currency"
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
            >
              £31.05
            </span>
          </td>
          <td
            className="govuk-table__cell"
            style={
              Object {
                "paddingRight": undefined,
              }
            }
          >
            <span>
              12 May 2023
            </span>
          </td>
          <td
            className="govuk-table__cell"
            style={
              Object {
                "paddingRight": undefined,
              }
            }
          >
            <span>
              12 May 2023
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots IUK Components/Message Box Alert 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <div
    className="govuk-warning-text acc-message acc-message__alert"
    data-qa="validation-message"
    data-qa-type="alert"
    style={
      Object {
        "borderColor": "#d4351c",
        "color": "#d4351c",
      }
    }
  >
    <span
      className="govuk-warning-text__assistive"
      data-qa="validation-message-assistive"
    >
      Alert
    </span>
    <span
      className="govuk-body"
      data-qa="validation-message-content"
      style={
        Object {
          "color": "#d4351c",
        }
      }
    >
      The quick brown fox jumps over the lazy dog.
    </span>
  </div>
</div>
`;

exports[`Storyshots IUK Components/Message Box Error 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <div
    className="govuk-warning-text acc-message acc-message__error"
    data-qa="validation-message"
    data-qa-type="error"
    style={
      Object {
        "borderColor": "#d4351c",
      }
    }
  >
    <span
      className="govuk-warning-text__assistive"
      data-qa="validation-message-assistive"
    >
      Error
    </span>
    <span
      className="govuk-body"
      data-qa="validation-message-content"
      style={
        Object {
          "color": undefined,
        }
      }
    >
      The quick brown fox jumps over the lazy dog.
    </span>
  </div>
</div>
`;

exports[`Storyshots IUK Components/Message Box Info 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <div
    className="govuk-warning-text acc-message acc-message__info"
    data-qa="validation-message"
    data-qa-type="info"
    style={
      Object {
        "borderColor": "#1d70b8",
      }
    }
  >
    <span
      className="govuk-warning-text__assistive"
      data-qa="validation-message-assistive"
    >
      Info
    </span>
    <span
      className="govuk-body"
      data-qa="validation-message-content"
      style={
        Object {
          "color": undefined,
        }
      }
    >
      The quick brown fox jumps over the lazy dog.
    </span>
  </div>
</div>
`;

exports[`Storyshots IUK Components/Message Box Markdown 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <div
    className="govuk-warning-text acc-message acc-message__info"
    data-qa="validation-message"
    data-qa-type="info"
    style={
      Object {
        "borderColor": "#1d70b8",
      }
    }
  >
    <span
      className="govuk-warning-text__assistive"
      data-qa="validation-message-assistive"
    >
      Info
    </span>
    <span
      className="govuk-body"
      data-qa="validation-message-content"
      style={
        Object {
          "color": undefined,
        }
      }
    >
      <span
        className="govuk-body markdown"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<p>Please <a target=\\"_blank\\" href=\\"https://ktp-uk.org\\">ktp</a> your way to victory</p>
<p>Please decide now.</p>
",
          }
        }
      />
    </span>
  </div>
</div>
`;

exports[`Storyshots IUK Components/Message Box Primary 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <div
    className="govuk-warning-text acc-message acc-message__info"
    data-qa="validation-message"
    data-qa-type="info"
    style={
      Object {
        "borderColor": "#1d70b8",
      }
    }
  >
    <span
      className="govuk-warning-text__assistive"
      data-qa="validation-message-assistive"
    >
      Info
    </span>
    <span
      className="govuk-body"
      data-qa="validation-message-content"
      style={
        Object {
          "color": undefined,
        }
      }
    >
      The quick brown fox jumps over the lazy dog.
    </span>
  </div>
</div>
`;

exports[`Storyshots IUK Components/Message Box Success 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <div
    className="govuk-warning-text acc-message acc-message__success"
    data-qa="validation-message"
    data-qa-type="success"
    style={
      Object {
        "borderColor": "#00703c",
        "color": "#00703c",
      }
    }
  >
    <span
      className="govuk-warning-text__assistive"
      data-qa="validation-message-assistive"
    >
      Success
    </span>
    <span
      className="govuk-body"
      data-qa="validation-message-content"
      style={
        Object {
          "color": "#00703c",
        }
      }
    >
      The quick brown fox jumps over the lazy dog.
    </span>
  </div>
</div>
`;

exports[`Storyshots IUK Components/Message Box Warning 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <div
    className="govuk-warning-text acc-message acc-message__warning"
    data-qa="validation-message"
    data-qa-type="warning"
    style={
      Object {
        "borderColor": "var(--govukColourBlack)",
      }
    }
  >
    <span
      className="govuk-warning-text__assistive"
      data-qa="validation-message-assistive"
    >
      Warning
    </span>
    <span
      className="govuk-body"
      data-qa="validation-message-content"
      style={
        Object {
          "color": undefined,
        }
      }
    >
      The quick brown fox jumps over the lazy dog.
    </span>
  </div>
</div>
`;

exports[`Storyshots React Hook Form/Button Standard Button 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <button
    className="govuk-button govuk-!-margin-right-1"
    data-module="govuk-button"
    name="button_default"
    type="button"
  >
    Bocchi the Button!!
  </button>
</div>
`;

exports[`Storyshots React Hook Form/Fieldset Standard Fieldset 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <fieldset
    className="govuk-fieldset"
  >
    <legend
      className="govuk-fieldset__legend govuk-fieldset__legend--m"
    >
      Personal details
    </legend>
    <div
      className="govuk-form-group"
    >
      <label
        className="govuk-label"
        htmlFor="first-name"
      >
        First name
      </label>
      <div
        className="govuk-hint"
        id="hint-for-first-name"
      >
        your first name is your current legally registered first name
      </div>
      <p
        className="govuk-error-message"
        style={
          Object {
            "textAlign": "left",
          }
        }
      >
        first name is required
      </p>
      <div
        className="govuk-input__wrapper"
      >
        <input
          aria-describedby="hint-for-first-name"
          className="govuk-input govuk-input--width-10"
          id="first-name"
          name="first-name"
          placeholder="first name"
          type="text"
        />
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots React Hook Form/Hint Standard Hint 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <div
    className="govuk-hint"
    id="hint-for-my-thing"
  >
    A Hint
  </div>
</div>
`;

exports[`Storyshots React Hook Form/Label Standard Label 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <label
    className="govuk-label"
    htmlFor="fruit-input"
  >
    A Label
  </label>
</div>
`;

exports[`Storyshots React Hook Form/Legend Standard Label 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <legend
    className="govuk-fieldset__legend govuk-fieldset__legend--m"
  >
    A Legendary Legend
  </legend>
</div>
`;

exports[`Storyshots React Hook Form/Page Standard Page 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <div
    className="govuk-width-container"
  >
    <main
      className="govuk-main-wrapper"
      id="main-content"
      role="main"
    >
      <div
        aria-live="polite"
      >
        <div
          aria-labelledby="error-summary-title"
          className="govuk-error-summary"
          data-module="govuk-error-summary"
          data-qa="validation-summary"
          role="alert"
          tabIndex={-1}
        >
          <h2
            className="govuk-error-summary__title"
            id="error-summary-title"
          >
            components.validationSummary.title
          </h2>
          <div
            className="govuk-error-summary__body"
          >
            <ul
              className="govuk-list govuk-error-summary__list"
            >
              <li>
                <a
                  href="#input"
                  onClick={[Function]}
                >
                  Field cannot be empty
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <h1>
        Demo page
      </h1>
      <p
        className="govuk-body"
      >
        This is a GovUk Page
      </p>
      <div
        className="govuk-form-group"
      >
        <label
          className="govuk-label"
          htmlFor="input"
        >
          This is an input
        </label>
        <p
          className="govuk-error-message"
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          Field cannot be empty
        </p>
        <div
          className="govuk-input__wrapper"
        >
          <input
            className="govuk-input govuk-!-width-one-third"
            id="input"
            type="text"
          />
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Storyshots React Hook Form/Submit Button Standard Submit Button 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <button
    className="govuk-button govuk-!-margin-right-1"
    data-module="govuk-button"
    name="button_default"
    type="submit"
  >
    Submit and return to summary
  </button>
</div>
`;

exports[`Storyshots React Hook Form/TextInput Prefix Text Input 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <div
    className="govuk-input__wrapper"
  >
    <div
      className="govuk-input__prefix"
    >
      £
    </div>
    <input
      className="govuk-input"
      placeholder="write something"
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots React Hook Form/TextInput Standard Text Input 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <div
    className="govuk-input__wrapper"
  >
    <input
      className="govuk-input"
      placeholder="write something"
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots React Hook Form/TextInput Suffix Text Input 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <div
    className="govuk-input__wrapper"
  >
    <input
      className="govuk-input"
      placeholder="write something"
      type="text"
    />
    <div
      className="govuk-input__suffix"
    >
      moonbeams
    </div>
  </div>
</div>
`;

exports[`Storyshots React Hook Form/Typography Bold P 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <p
    className="govuk-body govuk-!-font-weight-bold"
  >
    A bold Paragraph
  </p>
</div>
`;

exports[`Storyshots React Hook Form/Typography Multiline P 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <p
    className="govuk-body govuk-body--multiline"
  >
    Brühl received its town privileges in 1285. From 1567 on, the city
of Brühl was the official residence of the Prince Bishops of
Cologne. In the 18th century the Prince Bishop Clemens August
replaced a former ruined castle and built the Augustusburg and
Falkenlust palaces near the city center. Today, both are listed as
UNESCO World Heritage Sites because of their outstanding
rococo architecture. Until 1990 Augustusburg Palace was used
by the federal government to receive foreign heads of states
visiting West Germany.
  </p>
</div>
`;

exports[`Storyshots React Hook Form/Typography Standard P 1`] = `
<div
  className="govuk-template__body"
  id="root"
>
  <p
    className="govuk-body"
  >
    A standard Paragraph
  </p>
</div>
`;
